css/style.css
/* CSS used here will be applied after bootstrap.css */
html,body {
  height:100%; 
  background:#f9f9f9;
  overflow-x:hidden; 
}

.first {
  height:45vh;
  min-height:400px;
  background-size:cover;
 
}
.second{
  height:45vh;
  min-height:400px;
  background-size:cover;
 
}

nav .navbar-nav li a{
  color: white !important;
  }

  .navbar-light .navbar-brand {
    color: #d6d6d6;
}
.text{
position: absolute;
z-index: 100;
}

#Interests123{
  margin-top: 30em;
    }

.header-text {
 margin-top: 10em;
}
.header-text h1,p{
  color: white;
}
.header-text p{
  color: white;
}
/* Oval Effect Top of Page */

.header{
  width:105%;
  height:40%;
  left:-3%;
  position:absolute;
  background-image: linear-gradient(#8459f9, #4c3196);
  border-top-left-radius:10px;
  border-top-right-radius:10px;
  border-bottom-left-radius: 50% 20%;
  border-bottom-right-radius: 50% 20%;
}

.headContainer{
  width:100%;
  height:80vh;
  background-color:white;
  border-radius:10px;
  position:absolute;
  top:50%;
  overflow:hidden;
  left:50%;
  transform:translate(-50%,-50%);
}

h1 {
  text-align: center;
  font-weight: 300;
  color: #777
}

h1 span {
  font-weight: 600;
}



.body > nav{
  background-color: #8459f9 !important;
  transition: background-color 200ms linear;
}

.contrastBox{
  background-color: #FFF ;
  border: 1px solid #8459f9 ;
  padding: 20px;;
  border-radius: 25px;
}

.ExperienceContainer {
  width: 80%;
  padding: 10px 0;
  margin: 20px auto;
  position: relative;
  overflow: hidden;
}

.ExperienceContainer:before {
  content: '';
  position: absolute;
  top: 0;
  left: 50%;
  margin-left: -1px;
  width: 2px;
  height: 100%;
  background: #CCD1D9;
  z-index: 1
}
.aboutText p{
  font-size: 1.1em;
}

#myTable{
  max-width: 80%;
}

.fa-github {
 font-size: 50px;
 color: white
}



.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
  background-color: #4c3196 !important;
}



.timeline-block {
  width: -webkit-calc(50% + 8px);
  width: -moz-calc(50% + 8px);
  width: calc(50% + 8px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-box;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -moz-box-pack: justify;
  justify-content: space-between;
  clear: both;
}

.block-right {
  float: right;
}

.block-left {
  float: left;
  direction: rtl
}

.socials{
  font-size: 50px;
}

.customMarker {
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border: 2px solid #F5F7FA;
  background: #8459f9;
  margin-top: 10px;
  z-index: 9999
}

.expContent {
  width: 95%;
  padding: 0 15px;
  color: #666;
}

.expContent h3 {
  margin-top: 5px;
  margin-bottom: 5px;
  font-size: 25px;
  font-weight: 500
}

.expContent span {
  font-size: 15px;
  color: #a4a4a4;
}

.expContent p {
  font-size: 14px;
  line-height: 1.5em;
  word-spacing: 1px;
  color: #888;
}

@media screen and (max-width: 776px) {
  .header{
    width:105%;
    height:60%;
    left:-3%;
    position:absolute;
    background-image: linear-gradient(#8459f9, #4c3196);
    border-top-left-radius:10px;
    border-top-right-radius:10px;
    border-bottom-left-radius: 50% 20%;
    border-bottom-right-radius: 50% 20%;
  }

 #Interests123{
margin-top: 60em;
  }

  .section {
    height:70vh;
  }

  /* Made from a similar stack overflow solution.*/
  .timeline-block {
    width: -webkit-calc(50% + 8px);
    width: -moz-calc(50% + 8px);
    width: calc(50% + 8px);
    display: -webkit-box;
    display: -webkit-flex;
    display: -moz-box;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -moz-box-pack: justify;
    justify-content: space-between;
    clear: both;
  }
  
  .block-right {
    float: right;
  }
  
  .block-left {
    float: left;
    direction: rtl
  }
  
  .customMarker {
    width: 16px;
    height: 16px;
    border-radius: 50%;
    border: 2px solid #F5F7FA;
    background: #8459f9;
    margin-top: 10px;
    z-index: 9999
  }
  
  .expContent {
    width: 95%;
    padding: 0 15px;
    color: #666;
  }
  
  .ExperienceContainer:before {
    content: '';
    position: absolute;
    top: 0;
    left: 50%;
    margin-left: -1px;
    width: 2px;
    height: 100%;
    z-index: 1
  }



}

#sticky-footer{
  background-color: #8459f9;
  margin-top: 10px;
}
#contact{
  margin-top:5em;
  background-color: #fff;
}

@media screen and(min-width:991px){
  .navbar-expand-sm.scrolled {
    background-color: #8459f9 !important;
    transition: background-color 200ms linear;
  }
}



@media screen and (max-width: 768px) {
  .container:before {
     left: 8px;
     width: 2px;
  }
  .timeline-block {
     width: 100%;
     margin-bottom: 30px;
  }
  .block-right {
     float: none;
  }

  .block-left {
     float: none;
     direction: ltr;
  }
  #AboutPhone{
    margin-top:100px;
  }

}

/* Back to top */
#button {
  display: inline-block;
  background-color: #8459f9;
  width: 50px;
  height: 50px;
  text-align: center;
  border-radius: 4px;
  position: fixed;
  bottom: 30px;
  right: 30px;
  transition: background-color .3s, 
    opacity .5s, visibility .5s;
  opacity: 0;
  visibility: hidden;
  z-index: 1000;
}
#button::after {
  content: "\f077";
  font-family: FontAwesome;
  font-weight: normal;
  font-style: normal;
  font-size: 2em;
  line-height: 50px;
  color: #fff;
}
#button:hover {
  cursor: pointer;
  background-color: #333;
}
#button:active {
  background-color: #555;
}
#button.show {
  opacity: 1;
  visibility: visible;
}
/*Contact Button */
p{
  color: #777;
}
.navbar-toggler:focus, .navbar-toggler:active {
  outline: none;
  box-shadow: none;
}



.page-item.active .page-link{
  background-color: #8459f9;
}

